k8s/apitest_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apitest-BRANCHNAME

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apitest-birdnoise-BRANCHNAME
  namespace: apitest-BRANCHNAME
spec:
  rules:
    - host: apitest-BRANCHNAME.birdnoise.klucsik.fun
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: birdnoise-svc-be
                port:
                  number: 80

---
#be
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birdnoise-be
  namespace: apitest-BRANCHNAME
spec:
  replicas: 1
  selector:
    matchLabels:
      type: backend
      service: birdnoise
  template:
    metadata:
      labels:
        type: backend
        service: birdnoise
    spec:
      containers:
        - name: backend
          image: BE_IMAGETAG
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /api/actuator/health/liveness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /api/actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 10
---

apiVersion: v1
kind: Service
metadata:
  name: birdnoise-svc-be
  namespace: apitest-BRANCHNAME
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    type: backend
    service: birdnoise
