k8s/jenkins_ingress_on_external.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  rules:
    - host: jenkins.klucsik.duckdns.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jenkins-external-ip
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-external-ip
  namespace: jenkins
spec:
  ports:
  - name: jenkins-app
    port: 80
    protocol: TCP
    targetPort: 8008
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jenkins-external-ip
  namespace: jenkins
subsets:
- addresses:
  - ip: 192.168.0.141
  ports:
  - name: jenkins-app
    port: 8080
    protocol: TCP
