k8s/prod_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: birdnoise-main

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: birdnoise-main-fun
  namespace: birdnoise-main
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
    - host: www.main.birdnoise.klucsik.fun
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: birdnoise-svc-be
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: birdnoise-svc-fe
                port:
                  number: 80
    - host: www.main.birdnoise.klucsik.hu
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: birdnoise-svc-be
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: birdnoise-svc-fe
                port:
                  number: 80

---
#be
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birdnoise-be
  namespace: birdnoise-main
spec:
  replicas: 1
  selector:
    matchLabels:
      type: backend
      service: birdnoise
  template:
    metadata:
      labels:
        type: backend
        service: birdnoise
    spec:
      containers:
        - name: backend
          image: registry.klucsik.fun/birdnoise_be_main:1.0.10
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              path: /api/actuator/health/liveness
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/actuator/health/liveness
              port: 8080
            periodSeconds: 5
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /api/actuator/health/readiness
              port: 8080
            periodSeconds: 5
            failureThreshold: 10
---

apiVersion: v1
kind: Service
metadata:
  name: birdnoise-svc-be
  namespace: birdnoise-main
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    type: backend
    service: birdnoise

---
#fe
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birdnoise-fe
  namespace: birdnoise-main
spec:
  replicas: 1
  selector:
    matchLabels:
      type: frontend
      service: birdnoise
  template:
    metadata:
      labels:
        type: frontend
        service: birdnoise
    spec:
      containers:
        - name: frontend
          image: registry.klucsik.fun/birdnoise_fe_main:1.0.10
          imagePullPolicy: IfNotPresent
---

apiVersion: v1
kind: Service
metadata:
  name: birdnoise-svc-fe
  namespace: birdnoise-main
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    type: frontend
    service: birdnoise

---
#db
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birdnoise-db
  namespace: birdnoise-main
spec:
  replicas: 1
  selector:
    matchLabels:
      type: database
      service: birdnoise
  template:
    metadata:
      labels:
        type: database
        service: birdnoise
    spec:
      containers:
        - name: postgres
          image: postgres:14
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
              subPath: postgres
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: birdnoise-data



---



apiVersion: v1
kind: Service
metadata:
  name: birdnoise-svc-db
  namespace: birdnoise-main
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    type: database
    service: birdnoise
