k8s/registry-dashboard_ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: container-registry
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
spec:
  rules:
    - host: www.registry.klucsik.fun
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: registry
                port:
                  number: 5000
